--- a/ppt/style/01.css
+++ b/ppt/style/01.css
@@ -5,3 +5,13 @@
     margin-top:10px;
     background-color: rgba(0,0,0,.5);
 }
+.thin td, .thin th{
+	padding: 5px;
+}
+.thinner td, .thinner th{
+	padding: 2px 5px;
+}
+.tag td:nth-child(1){
+	width: 240px;
+	font-weight:normal;
+}
