--- a/ppt/css/nodeppt.css
+++ b/ppt/css/nodeppt.css
@@ -520,7 +520,8 @@ pre {
     position: relative;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
-    box-sizing: border-box
+    box-sizing: border-box;
+    max-height: 80%;
 }
 
 pre code {
